# Banking-WebApp

./: CMakeLists.txt  README.md  baseAccountClass.h  creditScoreAccountClass.h  db_instance.h  main.cpp  passwordHandler.h  saveBankAccountClass.h  sqlite_main.h
src/: App.jsx  Dashboard.jsx  HandleInputFields.jsx  Header.jsx  LoginPage.jsx  MaxTransaction.jsx  MoveMoneyField.jsx  Toast.jsx  ToastNotify.jsx  button.jsx  footer.jsx  index.css  inputEmail.jsx  signIn.jsx
